src/analyze/ast/parse.rs
use std::{ops::Range, path::PathBuf, rc::Rc};

use crate::analyze::{
    Error, ErrorCode, ErrorContext, ErrorVec, Span,
    ast::{
        AST, ArithmeticOp, Assignable, CompareOp, ExprInner, Expression, Item, LogicalOp,
        SemanticType, Statement,
    },
    lex::{
        Lexer,
        token::{Keyword, Operator, Token},
    },
};

pub struct Parser {
    err_ctx: ErrorContext,
    src_path: Rc<PathBuf>,
    lexer: Lexer,
}

impl Parser {
    pub fn new(src_path: Rc<PathBuf>, lexer: Lexer) -> Self {
        Self {
            err_ctx: ErrorContext::new(),
            src_path,
            lexer,
        }
    }

    pub fn into_ast(mut self) -> Result<AST, ErrorVec> {
        let mut ast = AST::new();

        let result = self.parse(&mut ast);
        let mut errors = self.err_ctx.take_errors();
        if let Err(err) = result {
            errors.0.push(err);
        }

        if !errors.is_empty() {
            return Err(errors);
        }

        // println!("{:#?}", ast);

        Ok(ast)
    }

    fn parse(&mut self, ast: &mut AST) -> Result<(), Error> {
        while self.lexer.current().is_some() {
            let item = self.parse_item()?;
            ast.add_item(item);
        }

        Ok(())
    }

    fn find_semicolon(&mut self) -> Result<bool, Error> {
        while let Some((token, _)) = self.lexer.take_current()? {
            if matches!(token, Token::Semicolon) {
                return Ok(true);
            }
        }

        Ok(false)
    }

    fn parse_item(&mut self) -> Result<Item, Error> {
        let (token, range) = self.expect_take_current()?;
        let Token::Keyword(keyword) = token else {
            return Err(self
                .err_ctx
                .unexpected_token(self.span(range), "expected keyword")
                .finish());
        };

        match keyword {
            Keyword::Function => self.parse_function(range.start),
            Keyword::Use => unimplemented!(),
            Keyword::Extern => self.parse_extern(),
            _ => Err(self
                .err_ctx
                .unexpected_token(self.span(range), "expected function or extern import")
                .finish()),
        }
    }

    fn parse_extern(&mut self) -> Result<Item, Error> {
        match self.parse_extern_inner() {
            Ok(item) => Ok(item),
            Err(err) => {
                self.err_ctx.report(err);

                Ok(Item::ExternLib(String::new()))
            }
        }
    }

    fn parse_extern_inner(&mut self) -> Result<Item, Error> {
        let (token, range) = self.expect_take_current()?;
        let Token::Ident(lib) = token else {
            return Err(self
                .err_ctx
                .unexpected_token(self.span(range), "expected library name")
                .finish());
        };

        self.expect_semicolon()?;

        Ok(Item::ExternLib(lib))
    }

    fn parse_function(&mut self, decl_start: usize) -> Result<Item, Error> {
        let (token, range) = self.expect_take_current()?;

        let name = match token {
            Token::Ident(name) => name,
            _ => {
                self.err_ctx
                    .unexpected_token(self.span(range), "expected function name")
                    .report();

                String::from("???")
            }
        };

        self.expect_token(Token::LeftParenthesis, "expected opening parenthesis")?;

        let args = self.parse_decl_args()?;

        self.expect_token(
            Token::RightParenthesis,
            "expected argument or closing parenthesis",
        )?;

        let ret_type = match self.lexer.current() {
            Some((Token::Arrow, _)) => {
                self.lexer.lex_one()?;
                self.parse_type()?
            }
            _ => SemanticType::Unit,
        };

        let decl_end = self.lexer.last_token_end();
        let decl_span = self.span(decl_start..decl_end);

        if matches!(self.lexer.current(), Some((Token::Semicolon, _))) {
            self.lexer.lex_one()?;

            Ok(Item::ForwardDecl {
                name,
                args,
                ret_type,
                decl_span,
            })
        } else {
            let body = self.parse_block()?;

            Ok(Item::Function {
                name,
                args,
                body,
                ret_type,
                decl_span,
            })
        }
    }

    fn parse_decl_args(&mut self) -> Result<Vec<(String, SemanticType, Span)>, Error> {
        let mut args = Vec::new();
        while let Some((Token::Ident(name), _)) = self.lexer.current() {
            let name = name.to_owned();

            let rstart = self.lexer.cur_token_start();

            self.lexer.lex_one()?;
            self.expect_matches(
                |t| matches!(t, Token::Colon),
                "expected colon and argument type",
            )?;

            let arg_type = self.parse_type()?;

            let rend = self.lexer.last_token_end();

            args.push((name, arg_type, self.span(rstart..rend)));

            if !matches!(self.lexer.current(), Some((Token::RightParenthesis, _))) {
                self.expect_token(Token::Comma, "expected comma")?;
            }
        }

        Ok(args)
    }

    fn parse_type(&mut self) -> Result<SemanticType, Error> {
        let (type_token, range) = self.expect_take_current()?;
        match type_token {
            Token::Reference => self
                .parse_type()
                .map(|t| SemanticType::Pointer(Box::new(t))),
            Token::Ident(type_str) => Ok(SemanticType::from(type_str)),
            Token::LeftParenthesis
                if matches!(self.lexer.current(), Some((Token::RightParenthesis, _))) =>
            {
                self.lexer.lex_one()?;
                Ok(SemanticType::Unit)
            }
            _ => Err(self
                .err_ctx
                .unexpected_token(self.span(range), "expected argument type")
                .finish()),
        }
    }

    fn parse_block(&mut self) -> Result<Vec<Statement>, Error> {
        self.expect_token(Token::LeftCurlyBracket, "expected block")?;

        let mut statements = Vec::new();
        while let Some((token, _)) = self.lexer.current() {
            if matches!(token, Token::RightCurlyBracket) {
                self.lexer.take_current()?;
                return Ok(statements);
            }

            match self.parse_statement() {
                Ok(stmt) => statements.push(stmt),
                Err(err) => {
                    self.err_ctx.report(err);
                    self.find_semicolon()?;
                }
            }
        }

        Err(self.err_ctx.unexpected_eof(self.span_eof()).finish())
    }

    fn parse_statement(&mut self) -> Result<Statement, Error> {
        let (token, range) = self.lexer.current().unwrap().clone();

        if let Token::Keyword(keyword) = token {
            self.lexer.take_current()?;
            self.parse_keyword(keyword, range.clone())
        } else {
            let expr = self.parse_expr()?;

            match self.lexer.take_current()? {
                Some((Token::Semicolon, _)) => Ok(Statement::Expr(expr)),
                Some((Token::Assign, _)) => {
                    let var = match expr.inner {
                        ExprInner::Variable(var) => Assignable::Var(var),
                        ExprInner::Deref(var, None) => Assignable::Ptr(var, None),
                        ExprInner::Index(array, index, size) => {
                            Assignable::Index(array, index, size)
                        }
                        _ => {
                            return Err(self
                                .err_ctx
                                .error(expr.span.clone())
                                .with_message("invalid assignment")
                                .with_label(expr.span, "only variables are allowed in assignments")
                                .finish());
                        }
                    };

                    let rvalue = self.parse_expr()?;
                    self.expect_semicolon()?;
                    Ok(Statement::Assign {
                        var,
                        expr: rvalue,
                        var_span: self.span(range),
                    })
                }
                Some((Token::Declare, _)) => {
                    let ExprInner::Variable(var) = expr.inner else {
                        return Err(self
                            .err_ctx
                            .error(expr.span.clone())
                            .with_message("invalid assignment")
                            .with_label(expr.span, "only variables are allowed in assignments")
                            .finish());
                    };

                    let rvalue = self.parse_expr()?;
                    self.expect_semicolon()?;
                    Ok(Statement::Declare {
                        var,
                        expr: rvalue,
                        var_span: self.span(range),
                    })
                }
                Some((_, range)) => Err(self
                    .err_ctx
                    .unexpected_token(self.span(range), "expected ';', '=' or ':='")
                    .finish()),
                None => Err(self.err_ctx.unexpected_eof(self.span_eof()).finish()),
            }
        }
    }

    fn parse_keyword(&mut self, keyword: Keyword, range: Range<usize>) -> Result<Statement, Error> {
        match keyword {
            Keyword::Return => self.parse_return(),
            Keyword::If => self.parse_if(),
            Keyword::While => self.parse_while_loop(),
            _ => Err(self
                .err_ctx
                .unexpected_token(self.span(range), "unexpected keyword")
                .finish()),
        }
    }

    fn parse_return(&mut self) -> Result<Statement, Error> {
        let expr = self.parse_expr()?;
        self.expect_semicolon()?;

        Ok(Statement::Return(expr))
    }

    fn parse_if(&mut self) -> Result<Statement, Error> {
        let guard = self.parse_expr()?;
        let body = self.parse_block()?;

        Ok(Statement::If { guard, body })
    }

    fn parse_while_loop(&mut self) -> Result<Statement, Error> {
        let guard = self.parse_expr()?;
        let body = self.parse_block()?;

        Ok(Statement::WhileLoop { guard, body })
    }

    fn _parse_expr(&mut self) -> Result<Expression, Error> {
        let lhs = self.parse_addsub()?;
        Ok(lhs)
    }

    fn parse_addsub(&mut self) -> Result<Expression, Error> {
        let lhs = self.parse_muldiv()?;
        match self.lexer.current() {
            Some((Token::Operator(op @ (Operator::Plus | Operator::Minus)), _)) => {
                let op = op.as_arithmetic().unwrap();
                self.lexer.lex_one()?;

                let rhs = self.parse_addsub()?;
                let span = self.span(lhs.span.1.start..rhs.span.1.end);

                Ok(Expression {
                    inner: ExprInner::Arithmetic(Box::new(lhs), Box::new(rhs), op, None),
                    span,
                })
            }
            _ => Ok(lhs),
        }
    }

    fn parse_muldiv(&mut self) -> Result<Expression, Error> {
        let lhs = self.parse_term()?;
        match self.lexer.current() {
            Some((Token::Operator(op @ (Operator::Star | Operator::Slash)), _)) => {
                let op = op.as_arithmetic().unwrap();
                self.lexer.lex_one()?;

                let rhs = self.parse_muldiv()?;
                let span = self.span(lhs.span.1.start..rhs.span.1.end);

                Ok(Expression {
                    inner: ExprInner::Arithmetic(Box::new(lhs), Box::new(rhs), op, None),
                    span,
                })
            }
            _ => Ok(lhs),
        }
    }

    fn parse_term(&mut self) -> Result<Expression, Error> {
        let (token, range) = self.expect_take_current()?;
        let span = self.span(range.clone());
        let expr = match token {
            Token::Number(num, explicit_type) => Expression {
                inner: ExprInner::Const(num, explicit_type),
                span,
            },
            Token::LeftParenthesis => {
                let expr = self.parse_expr()?;
                self.expect_token(Token::RightParenthesis, "expected closing parenthesis")?;
                expr
            }
            Token::Ident(ident) => self.parse_ident_expr(ident, range)?,
            _ => {
                return Err(self
                    .err_ctx
                    .unexpected_token(span.clone(), "unexpected term")
                    .with_label(span, "expected value, identifier or parenthesis")
                    .finish());
            }
        };

        Ok(expr)
    }

    fn parse_expr(&mut self) -> Result<Expression, Error> {
        let mut lhs = self.parse_single_expr()?;

        if let Some((Token::Operator(op), _)) = self.lexer.current() {
            let mut op = *op;

            let left_bind_power = op.precedence();

            self.lexer.take_current()?;

            let right_side = match self.lexer.peek() {
                Some((Token::Operator(next_op), _)) => Some((next_op.precedence(), *next_op)),
                _ => None,
            };

            let rhs = if let Some((right_bind_power, next_op)) = right_side
                && right_bind_power < left_bind_power
            {
                let rhs = self.parse_single_expr()?;
                lhs = Expression {
                    inner: self.bind_expr(op, lhs, rhs),
                    span: self.span(0..1),
                };

                self.lexer.lex_one()?;
                op = next_op;

                self.parse_expr()?
            } else {
                self.parse_expr()?
            };

            let span = self.span((lhs.span.1.start)..(rhs.span.1.end));
            let expr_type = self.bind_expr(op, lhs, rhs);

            return Ok(Expression {
                inner: expr_type,
                span,
            });
        }

        Ok(lhs)
    }

    fn bind_expr(&mut self, op: Operator, lhs: Expression, rhs: Expression) -> ExprInner {
        match op {
            Operator::Plus => {
                ExprInner::Arithmetic(Box::new(lhs), Box::new(rhs), ArithmeticOp::Add, None)
            }
            Operator::Minus => {
                ExprInner::Arithmetic(Box::new(lhs), Box::new(rhs), ArithmeticOp::Sub, None)
            }
            Operator::Star => {
                ExprInner::Arithmetic(Box::new(lhs), Box::new(rhs), ArithmeticOp::Mul, None)
            }
            Operator::Slash => {
                ExprInner::Arithmetic(Box::new(lhs), Box::new(rhs), ArithmeticOp::Div, None)
            }
            Operator::Equal => {
                ExprInner::Comparison(Box::new(lhs), Box::new(rhs), CompareOp::Equal, None)
            }
            Operator::NotEqual => {
                ExprInner::Comparison(Box::new(lhs), Box::new(rhs), CompareOp::NotEqual, None)
            }
            Operator::Less => {
                ExprInner::Comparison(Box::new(lhs), Box::new(rhs), CompareOp::Less, None)
            }
            Operator::LessOrEqual => {
                ExprInner::Comparison(Box::new(lhs), Box::new(rhs), CompareOp::LessOrEqual, None)
            }
            Operator::Greater => {
                ExprInner::Comparison(Box::new(lhs), Box::new(rhs), CompareOp::Greater, None)
            }
            Operator::GreaterOrEqual => ExprInner::Comparison(
                Box::new(lhs),
                Box::new(rhs),
                CompareOp::GreaterOrEqual,
                None,
            ),
            Operator::And => ExprInner::Logical(Box::new(lhs), Box::new(rhs), LogicalOp::And),
            Operator::Or => ExprInner::Logical(Box::new(lhs), Box::new(rhs), LogicalOp::Or),

            Operator::Not => unreachable!(),
        }
    }

    fn parse_single_expr(&mut self) -> Result<Expression, Error> {
        let token = self.expect_take_current()?;

        // BUG: the largest possible 64-bit unsigned integer doesnt work.
        let expr = match token {
            (Token::Number(num, explicit_type), range) => Expression {
                inner: ExprInner::Const(num, explicit_type),
                span: self.span(range),
            },
            (Token::Reference, ref_range) => {
                let (token, var_range) = self.expect_take_current()?;
                let Token::Ident(var) = token else {
                    let var_span = self.span(var_range);
                    return Err(self
                        .err_ctx
                        .error(self.span(ref_range))
                        .with_message("invalid pointer")
                        .with_label(var_span, "expected variable")
                        .finish());
                };

                Expression {
                    inner: ExprInner::Pointer(var),
                    span: self.span(ref_range.start..var_range.end),
                }
            }
            (Token::Operator(Operator::Star), deref_range) => {
                let (token, var_range) = self.expect_take_current()?;
                let Token::Ident(var) = token else {
                    let var_span = self.span(var_range);
                    return Err(self
                        .err_ctx
                        .error(self.span(deref_range))
                        .with_message("invalid pointer deref")
                        .with_label(var_span, "expected variable")
                        .finish());
                };

                Expression {
                    inner: ExprInner::Deref(var, None),
                    span: self.span(deref_range.start..var_range.end),
                }
            }
            (Token::Operator(Operator::Not), range) => {
                let expr = self.parse_single_expr()?;

                Expression {
                    inner: ExprInner::Negate(Box::new(expr)),
                    span: self.span(range),
                }
            }
            (Token::Ident(ident), range) => self.parse_ident_expr(ident, range)?,
            (Token::Character(c), range) => Expression {
                inner: ExprInner::Character(c),
                span: self.span(range),
            },
            (Token::String(string), range) => Expression {
                inner: ExprInner::String(string),
                span: self.span(range),
            },
            (Token::Bool(b), range) => Expression {
                inner: ExprInner::Bool(b),
                span: self.span(range),
            },
            (Token::LeftParenthesis, _) => {
                let expr = self.parse_expr()?;
                self.expect_token(Token::RightParenthesis, "expected closing parenthesis")?;
                expr
            }
            (_, range) => {
                return Err(self
                    .err_ctx
                    .unexpected_token(self.span(range), "invalid expression")
                    .finish());
            }
        };

        if let Some((Token::Keyword(Keyword::As), _)) = self.lexer.current() {
            self.lexer.lex_one()?;
            let typ = self.parse_type()?;

            let start = expr.span.1.start;
            let end = self.lexer.last_token_end();
            let span = self.span(start..end);

            return Ok(Expression {
                inner: ExprInner::Cast(Box::new(expr), typ),
                span,
            });
        }

        Ok(expr)
    }

    fn parse_ident_expr(
        &mut self,
        mut ident: String,
        range: Range<usize>,
    ) -> Result<Expression, Error> {
        while matches!(self.lexer.current(), Some((Token::PathSeparator, _))) {
            self.lexer.lex_one()?;
            let (token, range) = self.expect_take_current()?;
            let Token::Ident(sub_ident) = token else {
                return Err(self
                    .err_ctx
                    .unexpected_token(self.span(range), "expected identifier")
                    .finish());
            };

            ident.push_str("::");
            ident.push_str(&sub_ident);
        }

        if matches!(self.lexer.current(), Some((Token::LeftParenthesis, _))) {
            self.lexer.lex_one()?;

            let args = self.parse_call_args()?;

            self.expect_token(Token::RightParenthesis, "expected closing parenthesis")?;

            Ok(Expression {
                inner: ExprInner::FnCall(ident, args),
                span: self.span((range.start)..(self.lexer.last_token_end())),
            })
        } else if matches!(self.lexer.current(), Some((Token::LeftBracket, _))) {
            self.lexer.lex_one()?;

            let expr = self.parse_expr()?;

            self.expect_token(Token::RightBracket, "expected closing bracket")?;

            Ok(Expression {
                inner: ExprInner::Index(ident, Box::new(expr), None),
                span: self.span((range.start)..(self.lexer.last_token_end())),
            })
        } else {
            Ok(Expression {
                inner: ExprInner::Variable(ident),
                span: self.span((range.start)..(self.lexer.last_token_end())),
            })
        }
    }

    fn parse_call_args(&mut self) -> Result<Vec<Expression>, Error> {
        let mut args = Vec::new();
        let mut first = true;

        while !matches!(self.lexer.current(), Some((Token::RightParenthesis, _))) {
            if !first {
                self.expect_matches(|t| matches!(t, Token::Comma), "expected comma")?;
            }

            let expr = self.parse_expr()?;
            args.push(expr);

            first = false;
        }

        Ok(args)
    }

    fn expect_token(&mut self, token: Token, message: impl ToString) -> Result<(), Error> {
        self.expect_matches(|t| t == &token, message)
    }

    fn expect_matches<F>(&mut self, matches: F, message: impl ToString) -> Result<(), Error>
    where
        F: FnOnce(&Token) -> bool,
    {
        let (token, range) = self.expect_take_current()?;
        if !matches(&token) {
            return Err(self
                .err_ctx
                .unexpected_token(self.span(range), message)
                .finish());
        }

        Ok(())
    }

    fn expect_semicolon(&mut self) -> Result<(), Error> {
        let current = self.lexer.take_current()?;
        if !matches!(current, Some((Token::Semicolon, _))) {
            let pos = current
                .map(|t| t.1.start)
                .unwrap_or(self.lexer.cur_token_start());

            let insert_span = self.span((pos - 1)..pos);
            self.err_ctx
                .error(self.span(pos..(pos + 1)))
                .with_code(ErrorCode::MissingSemicolon)
                .with_message("expected semicolon")
                .with_label(insert_span, "insert the semicolon dummy")
                .report();
        }

        Ok(())
    }

    fn expect_take_current(&mut self) -> Result<(Token, Range<usize>), Error> {
        let token = self.lexer.take_current()?;
        match token {
            Some(token) => Ok(token),
            None => Err(self.err_ctx.unexpected_eof(self.span_eof()).finish()),
        }
    }

    fn span(&self, range: Range<usize>) -> (Rc<PathBuf>, Range<usize>) {
        (self.src_path.clone(), range)
    }

    fn span_eof(&self) -> (Rc<PathBuf>, Range<usize>) {
        let end = self.lexer.cur_token_start();
        self.span((end - 1)..end)
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    fn mod_main() -> Rc<PathBuf> {
        Rc::new(PathBuf::from("main"))
    }

    fn get_parser(src: &str) -> Parser {
        let lexer = Lexer::new(mod_main(), src).unwrap();
        Parser::new(mod_main(), lexer)
    }

    #[test]
    fn expr_addsub() {
        let ast = get_parser("2 + 3 - 4").parse_expr().unwrap();
        assert!(matches!(
            ast,
            Expression {
                inner: ExprInner::Arithmetic(
                    deref!(Expression {
                        inner: ExprInner::Const(2, None),
                        ..
                    }),
                    deref!(Expression {
                        inner: ExprInner::Arithmetic(
                            deref!(Expression {
                                inner: ExprInner::Const(3, None),
                                ..
                            }),
                            deref!(Expression {
                                inner: ExprInner::Const(4, None),
                                ..
                            }),
                            ArithmeticOp::Sub,
                            _
                        ),
                        ..
                    }),
                    ArithmeticOp::Add,
                    _
                ),
                ..
            }
        ));
    }

    #[test]
    fn expr_muldiv() {
        let ast = get_parser("2 * 3 / 4").parse_expr().unwrap();
        assert!(matches!(
            ast,
            Expression {
                inner: ExprInner::Arithmetic(
                    deref!(Expression {
                        inner: ExprInner::Const(2, None),
                        ..
                    }),
                    deref!(Expression {
                        inner: ExprInner::Arithmetic(
                            deref!(Expression {
                                inner: ExprInner::Const(3, None),
                                ..
                            }),
                            deref!(Expression {
                                inner: ExprInner::Const(4, None),
                                ..
                            }),
                            ArithmeticOp::Div,
                            _
                        ),
                        ..
                    }),
                    ArithmeticOp::Mul,
                    _
                ),
                ..
            }
        ));
    }

    #[test]
    fn expr_precedence_add_mul() {
        let ast = get_parser("2 + 3 * 4").parse_expr().unwrap();
        eprintln!("{:#?}", ast);
        assert!(matches!(
            ast,
            Expression {
                inner: ExprInner::Arithmetic(
                    deref!(Expression {
                        inner: ExprInner::Const(2, None),
                        ..
                    }),
                    deref!(Expression {
                        inner: ExprInner::Arithmetic(
                            deref!(Expression {
                                inner: ExprInner::Const(3, None),
                                ..
                            }),
                            deref!(Expression {
                                inner: ExprInner::Const(4, None),
                                ..
                            }),
                            ArithmeticOp::Mul,
                            _
                        ),
                        ..
                    }),
                    ArithmeticOp::Add,
                    _
                ),
                ..
            }
        ));
    }

    #[test]
    fn expr_precedence_mul_add() {
        let ast = get_parser("2 * 3 + 4").parse_expr().unwrap();
        eprintln!("{:#?}", ast);
        assert!(matches!(
            ast,
            Expression {
                inner: ExprInner::Arithmetic(
                    deref!(Expression {
                        inner: ExprInner::Arithmetic(
                            deref!(Expression {
                                inner: ExprInner::Const(2, None),
                                ..
                            }),
                            deref!(Expression {
                                inner: ExprInner::Const(3, None),
                                ..
                            }),
                            ArithmeticOp::Mul,
                            _
                        ),
                        ..
                    }),
                    deref!(Expression {
                        inner: ExprInner::Const(4, None),
                        ..
                    }),
                    ArithmeticOp::Add,
                    _
                ),
                ..
            }
        ));
    }

    #[test]
    fn expr_parenthesis() {
        let ast = get_parser("2 * (3 + 4)").parse_expr().unwrap();
        eprintln!("{:#?}", ast);
        assert!(matches!(
            ast,
            Expression {
                inner: ExprInner::Arithmetic(
                    deref!(Expression {
                        inner: ExprInner::Const(2, None),
                        ..
                    }),
                    deref!(Expression {
                        inner: ExprInner::Arithmetic(
                            deref!(Expression {
                                inner: ExprInner::Const(3, None),
                                ..
                            }),
                            deref!(Expression {
                                inner: ExprInner::Const(4, None),
                                ..
                            }),
                            ArithmeticOp::Add,
                            _
                        ),
                        ..
                    }),
                    ArithmeticOp::Mul,
                    _
                ),
                ..
            }
        ));
    }

    #[test]
    fn expr_combo() {
        let ast = get_parser("1 + 2 * 3 - (4 + 5) / 6").parse_expr().unwrap();
        eprintln!("{:#?}", ast);
        assert!(matches!(
            ast,
            Expression {
                inner: ExprInner::Arithmetic(
                    deref!(Expression {
                        inner: ExprInner::Const(1, None),
                        ..
                    }),
                    deref!(Expression {
                        inner: ExprInner::Arithmetic(
                            deref!(Expression {
                                inner: ExprInner::Arithmetic(
                                    deref!(Expression {
                                        inner: ExprInner::Const(2, None),
                                        ..
                                    }),
                                    deref!(Expression {
                                        inner: ExprInner::Const(3, None),
                                        ..
                                    }),
                                    ArithmeticOp::Mul,
                                    _
                                ),
                                ..
                            }),
                            deref!(Expression {
                                inner: ExprInner::Arithmetic(
                                    deref!(Expression {
                                        inner: ExprInner::Arithmetic(
                                            deref!(Expression {
                                                inner: ExprInner::Const(4, None),
                                                ..
                                            }),
                                            deref!(Expression {
                                                inner: ExprInner::Const(5, None),
                                                ..
                                            }),
                                            ArithmeticOp::Add,
                                            _
                                        ),
                                        ..
                                    }),
                                    deref!(Expression {
                                        inner: ExprInner::Const(6, None),
                                        ..
                                    }),
                                    ArithmeticOp::Div,
                                    _
                                ),
                                ..
                            }),
                            ArithmeticOp::Sub,
                            _
                        ),
                        ..
                    }),
                    ArithmeticOp::Add,
                    _
                ),
                ..
            }
        ));
    }

    #[test]
    fn expr_ident() {
        let ast = get_parser("2 + pi * 4").parse_expr().unwrap();
        eprintln!("{:#?}", ast);
        assert!(matches!(
            ast,
            Expression {
                inner: ExprInner::Arithmetic(
                    deref!(Expression {
                        inner: ExprInner::Const(2, None),
                        ..
                    }),
                    deref!(Expression {
                        inner: ExprInner::Arithmetic(
                            deref!(Expression {
                                inner: ExprInner::Variable("pi"),
                                ..
                            }),
                            deref!(Expression {
                                inner: ExprInner::Const(4, None),
                                ..
                            }),
                            ArithmeticOp::Mul,
                            _
                        ),
                        ..
                    }),
                    ArithmeticOp::Add,
                    _
                ),
                ..
            }
        ));
    }
}
